# xai-gdocs

./: README.md  gdocs_components.py  pyproject.toml  requirements.txt
.github/workflows/: run-workflow-tests.yml
