[project]
name = "xircuits-component-library-template"
version = "0.1.0"
description = "A brief description of your component library"
authors = [{ name = "Eduardo Gonzalez", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-gdocs"
keywords = ["xircuits", "Google Docs"]

# Xircuits-specific configurations
[tool.xircuits]
#default_example_path = "example.xircuits"
requirements_path = "requirements.txt"