[project]
name = "xai-gdocs"
version = "0.2.0"
description = "A component library for interacting with Google Docs"
authors = [{ name = "Eduardo Gonzalez", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-gdocs"
keywords = ["xircuits", "Google Docs"]

# Xircuits-specific configurations
[tool.xircuits]
#default_example_path = "example.xircuits"
requirements_path = "requirements.txt"
